update endpoints-docker